# mai-playdata

./: CMakeLists.txt  README  TODO  main.c  rating
client/: client.c
import-mai-data/: package.json
import-mai-data/src/: chart.js
import-script/: import.js
include/: define.h  object.h  rating.h  snapshot.h
include/rating/: rating.h  read.h  types.h  write.h
server/: server.c
src/: main.c  object.c  rating.c
test/: mai-playdata
